--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="com.oraclechain.pe4devs.activity.SetPasswordActivity">
+    tools:context="com.oraclechain.pe4devs.activity.SetWalletInfoActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,76 +34,139 @@
             android:textSize="15sp"/>
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center_vertical"
-        android:text="密码"
-        android:textColor="@color/txt_color"
-        android:textSize="13sp"/>
+        android:scrollbars="none">
 
-    <com.oraclechain.pe4devs.view.ClearEditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@null"
-        android:gravity="center_vertical"
-        android:hint="请输入密码"
-        android:inputType="textPassword"
-        android:textColor="@color/title_color"
-        android:textColorHint="@color/gray_color"
-        android:textSize="14sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginLeft="10dp"
-        android:background="@color/line"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_vertical"
+                android:text="钱包名字"
+                android:textColor="@color/txt_color"
+                android:textSize="13sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center_vertical"
-        android:text="确认密码"
-        android:textColor="@color/txt_color"
-        android:textSize="13sp"/>
+            <com.oraclechain.pe4devs.view.ClearEditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="请输入钱包名字"
+                android:textColor="@color/title_color"
+                android:textColorHint="@color/gray_color"
+                android:textSize="14sp"/>
 
-    <com.oraclechain.pe4devs.view.ClearEditText
-        android:id="@+id/confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@null"
-        android:gravity="center_vertical"
-        android:hint="请再次输入密码"
-        android:inputType="textPassword"
-        android:textColor="@color/title_color"
-        android:textColorHint="@color/gray_color"
-        android:textSize="14sp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="10dp"
+                android:background="@color/line"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginLeft="10dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_vertical"
+                android:text="钱包绑定手机号"
+                android:textColor="@color/txt_color"
+                android:textSize="13sp"/>
 
-        android:background="@color/line"/>
+            <com.oraclechain.pe4devs.view.ClearEditText
+                android:id="@+id/phone"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="请输入钱包手机号"
+                android:inputType="number"
+                android:textColor="@color/title_color"
+                android:textColorHint="@color/gray_color"
+                android:textSize="14sp"/>
 
-    <TextView
-        android:id="@+id/create_wallet"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/blue_button"
-        android:clickable="true"
-        android:gravity="center"
-        android:text="确定"
-        android:textColor="@color/white"
-        android:textSize="14sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_vertical"
+                android:text="密码"
+                android:textColor="@color/txt_color"
+                android:textSize="13sp"/>
+
+            <com.oraclechain.pe4devs.view.ClearEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="请输入密码"
+                android:inputType="textPassword"
+                android:textColor="@color/title_color"
+                android:textColorHint="@color/gray_color"
+                android:textSize="14sp"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="10dp"
+                android:background="@color/line"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_vertical"
+                android:text="确认密码"
+                android:textColor="@color/txt_color"
+                android:textSize="13sp"/>
+
+            <com.oraclechain.pe4devs.view.ClearEditText
+                android:id="@+id/confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="请再次输入密码"
+                android:inputType="textPassword"
+                android:textColor="@color/title_color"
+                android:textColorHint="@color/gray_color"
+                android:textSize="14sp"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="10dp"
+
+                android:background="@color/line"/>
+
+            <TextView
+                android:id="@+id/create_wallet"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/blue_button"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="确定"
+                android:textColor="@color/white"
+                android:textSize="14sp"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
